working loogs and pledge functions with sign ups and sign ins

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+/android
+/ios
 
 # Metro
 .metro-health-check*
@@ -37,3 +39,4 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.env    
